<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        tools:context="cloud.dishwish.ragmart.dishwish.start.StartActivity"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/login_txtUserEmail"
            android:hint="@string/editText_user_email"
            style="@style/signup_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_action_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/login_txtPassword"
            android:hint="@string/editText_password"
            style="@style/signup_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/login_txtUserEmail"
            android:layout_below="@+id/login_txtUserEmail"
            android:layout_marginTop="13dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_below="@+id/login_txtPassword"
            style="@style/login_phase_button"
            android:background="@drawable/login_button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/button_login"/>

        <Button
            android:id="@+id/login_btnFBLogin"
            android:layout_below="@id/login_btnLogin"
            style="@style/login_phase_button"
            android:background="@drawable/login_button_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/button_login_facebook"
            android:paddingRight="20dp"
            android:drawableLeft="@drawable/ic_action_facebook" />

    </RelativeLayout>
</ScrollView>
