<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select your gender"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18dp"/>

    <RadioGroup
        android:id="@+id/start_gender_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:buttonTint="@color/colorHint"
            android:textSize="18dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:buttonTint="@color/colorHint"
            android:textSize="18dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_other"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:buttonTint="@color/colorHint"
            android:textSize="18dp"/>
    </RadioGroup>
</LinearLayout>